2022-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.11

	* vignettes/introduction.md: Microedit

2022-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/interface.cpp (log_filesetup): Setup (simple) file-based logger
	* R/RcppExports.R: R accessor
	* src/RcppExports.cpp: Autogenerated export for C level access
	* inst/include/RcppSpdlog_RcppExports.h: Idem
	* inst/include/rcpp_sink.h: Added #include
	* man/log_setup.Rd: Added documentation
	* inst/include/spdl.h: Added in spdl namespace

2022-12-02  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Mention the new spdl package

2022-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/formatter.cpp: Export to C++ to make formatter() callable
	* src/RcppExports.cpp: Autogenerated export for C level access
	* inst/include/RcppSpdlog_RcppExports.h: Idem

2022-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.10

	* vignettes/introduction.md: More edits

2022-11-15  Dirk Eddelbuettel  <edd@debian.org>

 	* src/formatter.cpp (formatter): Add formatting helper which passes
	logging string to fmt::format() enable fmt's "format" from R
	* src/RcppExports.cpp: Ditto
	* R/RcppExports.R (formatter): Ditto
	* man/formatter.Rd: Docs

	* inst/include/spdl.h: Include fmtlib::fmt via spdlog

2022-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

	* inst/include/spdl.h: Use variadic templates to fmt::format

2022-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.9

2022-11-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

	* inst/include/spdlog/*: New upstream release spdlog 1.11.0

 	* vignettes/introduction.md: Small edits

2022-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/introduction.md: New sections for access from R and C++

2022-11-01  Dirk Eddelbuettel  <edd@debian.org>
