@@ -1,3 +1,5 @@
 useDynLib(RcppSpdlog, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
+S3method("format", "stopwatch")
+S3method("print", "stopwatch")
